<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvIdAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvId"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:labelFor="@id/etIdAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etIdAdd" />

    <EditText
        android:id="@+id/etIdAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/red_hint"
        app:layout_constraintEnd_toEndOf="@+id/etNombreAdd"
        app:layout_constraintStart_toStartOf="@+id/etNombreAdd"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvNombreAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvNombre"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:labelFor="@id/etNombreAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etNombreAdd" />

    <EditText
        android:id="@+id/etNombreAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/red_hint"
        app:layout_constraintEnd_toEndOf="@+id/etBodegaAdd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etBodegaAdd"
        app:layout_constraintTop_toBottomOf="@+id/etIdAdd"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvBodegaAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvBodega"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:labelFor="@id/etBodegaAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etBodegaAdd" />

    <EditText
        android:id="@+id/etBodegaAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/red_hint"
        app:layout_constraintEnd_toEndOf="@+id/etColorAdd"
        app:layout_constraintStart_toStartOf="@+id/etColorAdd"
        app:layout_constraintTop_toBottomOf="@+id/etNombreAdd"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvColorAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvColor"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:labelFor="@id/etColorAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etColorAdd" />

    <EditText
        android:id="@+id/etColorAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/red_hint"
        app:layout_constraintEnd_toEndOf="@+id/etOrigenAdd"
        app:layout_constraintStart_toStartOf="@+id/etOrigenAdd"
        app:layout_constraintTop_toBottomOf="@+id/etBodegaAdd"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvOrigenAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvOrigen"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:labelFor="@id/etOrigenAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etOrigenAdd" />

    <EditText
        android:id="@+id/etOrigenAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/red_hint"
        app:layout_constraintEnd_toEndOf="@+id/etGraduacionAdd"
        app:layout_constraintStart_toStartOf="@+id/etGraduacionAdd"
        app:layout_constraintTop_toBottomOf="@+id/etColorAdd"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvGraduacionAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvGraduacion"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:labelFor="@id/etGraduacionAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etGraduacionAdd" />

    <EditText
        android:id="@+id/etGraduacionAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="@color/red_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvGraduacionAdd"
        app:layout_constraintTop_toBottomOf="@+id/etOrigenAdd"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvFechaAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:labelFor="@id/etFechaAdd"
        android:text="@string/tvFecha"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etFechaAdd" />

    <EditText
        android:id="@+id/etFechaAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/etGraduacionAdd"
        app:layout_constraintStart_toStartOf="@+id/etGraduacionAdd"
        app:layout_constraintTop_toBottomOf="@+id/etGraduacionAdd"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btAddAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>